--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
-  "author": "Spotify",
-  "name": "web-api-auth-examples",
-  "description": "Basic examples of the Spotify authorization flows through OAuth 2",
-  "version": "0.0.2",
+  "name": "my-app",
+  "version": "0.0.1",
+  "description": "What am I about?",
+  "main": "server.js",
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
-    "cookie-parser": "1.3.2",
-    "express": "~4.16.0",
-    "cors": "^2.8.4",
-    "querystring": "~0.2.0",
-    "request": "~2.83.0"
+    "express": "^4.15.3",
+    "spotify-web-api-node": "^2.5.0"
+  },
+  "engines": {
+    "node": "8.x"
   }
 }
