refactor code to support front-end and back-end server

--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "^4.15.3",
-    "spotify-web-api-node": "^2.5.0"
+    "spotify-web-api-node": "^2.5.0",
+    "superagent": "^5.2.2"
   },
   "engines": {
     "node": "8.x"
