--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "express": "^4.15.3",
     "spotify-web-api-node": "^2.5.0",
-    "superagent": "^5.2.2"
+    "superagent": "^5.2.2",
+    "uuid": "^8.3.1"
   },
   "engines": {
     "node": "8.x"
