--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.15.3",
     "spotify-web-api-node": "^2.5.0",
     "superagent": "^5.2.2",
